--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,24 @@ endif (UNIX)
 
 PROJECT(YungCPP)
 
+# Preset OpenSSL directories
+IF (NOT OPENSSL_ROOT_DIR)
+  MESSAGE("-- Setting default OpenSSL Root Directory")
+  SET(OPENSSL_ROOT_DIR "/usr/local/opt/openssl")
+ENDIF (NOT OPENSSL_ROOT_DIR)
+
+IF (NOT OPENSSL_LIBRARIES)
+  MESSAGE("-- Setting default OpenSSL Library Directory")
+  SET(OPENSSL_LIBRARIES "/usr/local/opt/openssl/lib")
+ENDIF (NOT OPENSSL_LIBRARIES)
+
+
+
+MESSAGE("-- OPENSSL ROOT PATH \t" ${OPENSSL_ROOT_DIR})
+MESSAGE("-- OPENSSL LIBRARIES \t" ${OPENSSL_LIBRARIES})
+
 # Required for YungC++ to compile
+FIND_PACKAGE(OPENSSL REQUIRED)
 FIND_PACKAGE(Boost COMPONENTS program_options thread chrono system REQUIRED)
 FIND_PACKAGE(cpprestsdk REQUIRED)
 
@@ -33,7 +50,7 @@ OPTION(MYSQLCXX "Enable Mongo C++ Drivers" OFF)
 # Optional MongoCXX build files
 IF (MONGOCXX)
   INCLUDE("${CMAKE_CURRENT_LIST_DIR}/cmake/Mongo.cmake")
-  MESSAGE("-- MongoDB now Enabled, MONGOCXX definition added\t\t")
+  MESSAGE("-- MongoDB now enabled, MONGOCXX definition added")
   SET(
     REQUIRED_DEFINITIONS
     ${REQUIRED_DEFINITONS}
@@ -43,12 +60,24 @@ ENDIF (MONGOCXX)
 
 # Optional RedisCXX build files
 IF (REDISCXX)
-
+INCLUDE("${CMAKE_CURRENT_LIST_DIR}/cmake/Redis.cmake")
+  MESSAGE("-- Redis now enabled, REDISCXX definition added")
+  SET(
+    REQUIRED_DEFINITIONS
+    ${REQUIRED_DEFINITONS}
+    REDISCXX
+  )
 ENDIF (REDISCXX)
 
 # Optional MySQLCXX build files
 IF (MYSQLCXX)
-
+  INCLUDE("${CMAKE_CURRENT_LIST_DIR}/cmake/Mysql.cmake")
+  MESSAGE("-- MySQL now enabled, MYSQLCXX definition added")
+  SET(
+    REQUIRED_DEFINITIONS
+    ${REQUIRED_DEFINITONS}
+    MYSQLCXX
+  )
 ENDIF (MYSQLCXX)
 
 # Create executable
